# analytics-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: start.sh
src/: alembic.ini  main.py  seed.py
src/analytics_utils/: date.py  logging.py  middlewares.py
src/migrations/: env.py
src/migrations/versions/: 1f6fbd501def_convert_uuid_column_to_varchar_36.py  e475ba15d3cd_dev.py
src/mock_data/: configurations.py  events.json
src/modules/report/: report_controller.py  report_dto.py  report_service.py
src/modules/utilities/: utilities_controller.py  utilities_dto.py
src/pipelines/: __init__.py  consumer.py  pipeline.py  pipeline_exception.py  producer.py
src/services/: annotation.py  cloud_storage.py  configuration.py  database.py  database_exception.py  models.py  sso.py  telemetry.py
src/services/mongodb/: database.py
